[profile.release]
panic = "abort"


[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[package]
name = "chaos"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
panic-halt = "0.2.0"
rlibc = "1.0.0"
spin = "0.9.8"
volatile = "0.4.6"
